Changed the logic for Tool Calling and LLM --0722

--- a/Diet_Plan_MCP_Server/src/main/resources/application.properties
+++ b/Diet_Plan_MCP_Server/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 spring.application.name=Diet_Plan_MCP_Server
-server.port=8090
+
+#mcp server configs
+spring.ai.mcp.server.name=dietMcpserverSse
+spring.ai.mcp.server.version=1.0.0
+spring.ai.mcp.server.enabled=true
+spring.ai.mcp.server.type=ASYNC
+
+# SSE Configuration for HTTP Transport
+spring.ai.mcp.server.sse-message-endpoint=/mcp/messages
+spring.ai.mcp.server.sse-endpoint=/sse
+
+logging.level.org.springframework.ai=DEBUG
+server.port=9090
+
 
 # Database Configuration - Update these with your PostgreSQL details
-spring.datasource.url=jdbc:postgresql://localhost:5432/diet_plan_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
 spring.datasource.username=postgres
 spring.datasource.password=database
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,13 +26,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.main.web-application-type=none
-spring.main.banner-mode=off
-logging.pattern.console=
-
-spring.ai.mcp.server.stdio=true
-spring.ai.mcp.server.name=diet_mcp_server
-spring.ai.mcp.server.version=0.0.1
-
+#spring.main.web-application-type=none
+#spring.main.banner-mode=off
+#logging.pattern.console=
 
 
