--- a/Diet_Plan_Client/pom.xml
+++ b/Diet_Plan_Client/pom.xml
@@ -38,9 +38,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-starter-mcp-client</artifactId>
-		</dependency>
+    <groupId>org.springframework.ai</groupId>
+    <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
+</dependency>
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-webflux</artifactId>
+	</dependency>
 		<dependency>
 	      <groupId>org.springframework.ai</groupId>
 	      <artifactId>spring-ai-starter-model-openai</artifactId>
@@ -51,13 +55,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--<dependency>
-		      <groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>4.12.0</version>
-	    </dependency>-->
-	   
+ 
 	</dependencies>
+	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -78,5 +78,6 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 
 </project>
