--- a/Diet_Plan_Client/src/main/resources/application.properties
+++ b/Diet_Plan_Client/src/main/resources/application.properties
@@ -1,30 +1,19 @@
 spring.application.name=Diet_Plan_Client
+
+spring.ai.mcp.client.name=diet_mcp_client
+spring.ai.mcp.client.enabled=true
+spring.ai.mcp.client.type=ASYNC
+spring.ai.mcp.client.sse-endpoint=/sse
+spring.ai.mcp.client.sse.connections.dietServer1.url=http://localhost:9090
+
 server.port=7070
 
-#ollama configurations
-#spring.ai.ollama.base-url=http://localhost:11434
-#spring.ai.ollama.chat.options.model=llama3.1
-
 # For Gemini API via OpenAI library
-spring.ai.openai.api-key={GEMINI_APY_KEY}
+spring.ai.openai.api-key={GEMINI_API_KEY}
 spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai
-#https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
-#https://generativelanguage.googleapis.com/v1beta/openai
-
 spring.ai.openai.chat.completions-path: /chat/completions
 spring.ai.openai.chat.options.model=gemini-2.0-flash
 
-#mcp client configurations
-spring.ai.mcp.client.name=diet_mcp_client
-spring.ai.mcp.client.toolcallback.enabled=true
-spring.ai.mcp.client.type=SYNC
-spring.ai.mcp.client.stdio.servers-configuration=classpath:/mcp-servers-config.json
-
-#spring.main.web-application-type=none
-#spring.main.banner-mode=off
-#logging.pattern.console=
-
-#spring.ai.mcp.server.stdio=true
 
 logging.level.org.springframework.ai=DEBUG
 
