--- a/Diet_Plan_MCP_Server/pom.xml
+++ b/Diet_Plan_MCP_Server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
+		<version>3.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ninja</groupId>
@@ -36,6 +36,7 @@
 	      <artifactId>spring-boot-starter-validation</artifactId>
 	    </dependency>
 
+		<!-- Database Dependencies-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -53,24 +54,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Dependency for Postgres DB Connectivity -->
+		<dependency>
+	      <groupId>org.springframework.ai</groupId>
+	      <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
+	    </dependency>
+    
+<!-- Dependency for Postgres DB Connectivity -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		
-		<!--<dependency>
-	      <groupId>org.springframework.ai</groupId>
-	      <artifactId>spring-ai-starter-mcp-client</artifactId>
-		<scope>provided</scope>
-	    </dependency>-->
-	
-		<dependency>
-	      <groupId>org.springframework.ai</groupId>
-	      <artifactId>spring-ai-starter-mcp-server</artifactId>
-	    </dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -85,7 +80,7 @@
 	      <optional>true</optional>
 	    </dependency>
 
-		<dependency>
+<!--		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.6.3</version>
@@ -96,13 +91,13 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.6.3</version>
 		</dependency>
-
+-->
 		<!-- Dependency for Swagger API -->
-   	    <dependency>
+<!--   	    <dependency>
 		    <groupId>org.springdoc</groupId>
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>2.8.5</version>
-		</dependency>  	    
+		</dependency>  	-->    
 	</dependencies>
 
 	 <dependencyManagement>
