Added SweetBalance Code - DietPlans 0724

--- a/Diet_Plan_Client/src/main/resources/application.properties
+++ b/Diet_Plan_Client/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Diet_Plan_Client
 
 spring.ai.mcp.client.name=diet_mcp_client
 spring.ai.mcp.client.enabled=true
-spring.ai.mcp.client.type=ASYNC
-spring.ai.mcp.client.sse-endpoint=/sse
+spring.ai.mcp.client.type=SYNC
+#spring.ai.mcp.client.sse-endpoint=/sse
 spring.ai.mcp.client.sse.connections.dietServer1.url=http://localhost:9090
 
 server.port=7070
@@ -12,7 +12,7 @@ server.port=7070
 spring.ai.openai.api-key={GEMINI_API_KEY}
 spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai
 spring.ai.openai.chat.completions-path: /chat/completions
-spring.ai.openai.chat.options.model=gemini-2.0-flash
+spring.ai.openai.chat.options.model=gemini-2.5-pro
 
 
 logging.level.org.springframework.ai=DEBUG
