--- a/Diet_Plan_MCP_Server/src/main/resources/application.properties
+++ b/Diet_Plan_MCP_Server/src/main/resources/application.properties
@@ -4,10 +4,12 @@ spring.application.name=Diet_Plan_MCP_Server
 spring.ai.mcp.server.name=dietMcpserverSse
 spring.ai.mcp.server.version=1.0.0
 spring.ai.mcp.server.enabled=true
-spring.ai.mcp.server.type=ASYNC
+spring.ai.mcp.server.type=SYNC
 
 # SSE Configuration for HTTP Transport
+#client-to-server requests
 spring.ai.mcp.server.sse-message-endpoint=/mcp/messages
+#server-to-client communication
 spring.ai.mcp.server.sse-endpoint=/sse
 
 logging.level.org.springframework.ai=DEBUG
