Added Logger, exception handling, spring profile settings

--- a/Diet_Plan_Client/src/main/resources/application.properties
+++ b/Diet_Plan_Client/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 spring.application.name=Diet_Plan_Client
+spring.profiles.active=local
+
 
 spring.ai.mcp.client.name=diet_mcp_client
 spring.ai.mcp.client.enabled=true
-spring.ai.mcp.client.type=SYNC
+spring.ai.mcp.client.type=ASYNC
 #spring.ai.mcp.client.sse-endpoint=/sse
-spring.ai.mcp.client.sse.connections.dietServer1.url=http://localhost:9090
+#spring.ai.mcp.client.sse.connections.dietServer1.url=http://localhost:9090
 
-server.port=7070
+#server.port=7070
 
 # For Gemini API via OpenAI library
 spring.ai.openai.api-key={GEMINI_API_KEY}
 spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai
 spring.ai.openai.chat.completions-path: /chat/completions
 spring.ai.openai.chat.options.model=gemini-2.5-pro
+spring.ai.openai.chat.options.temperature=0
+
+#logging.level.org.springframework.ai=DEBUG
 
 
-logging.level.org.springframework.ai=DEBUG
 
