--- a/Diet_Plan_MCP_Server/src/main/resources/application.properties
+++ b/Diet_Plan_MCP_Server/src/main/resources/application.properties
@@ -4,23 +4,24 @@ spring.application.name=Diet_Plan_MCP_Server
 spring.ai.mcp.server.name=dietMcpserverSse
 spring.ai.mcp.server.version=1.0.0
 spring.ai.mcp.server.enabled=true
-spring.ai.mcp.server.type=SYNC
+spring.ai.mcp.server.type=ASYNC
 
 # SSE Configuration for HTTP Transport
 #client-to-server requests
 spring.ai.mcp.server.sse-message-endpoint=/mcp/messages
 #server-to-client communication
 spring.ai.mcp.server.sse-endpoint=/sse
+#spring.ai.mcp.server.endpoint=/mcp
 
-logging.level.org.springframework.ai=DEBUG
-server.port=9090
+#logging.level.org.springframework.ai=DEBUG
+#server.port=9090
 
 
 # Database Configuration - Update these with your PostgreSQL details
-spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
-spring.datasource.username=postgres
-spring.datasource.password=database
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
+#spring.datasource.username=postgres
+#spring.datasource.password=database
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -32,4 +33,4 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.main.banner-mode=off
 #logging.pattern.console=
 
-
+spring.profiles.active=local
